feat: separar agendamentos da programacao mensal
